<resources>
    <string name="app_name">InterestingPlaces</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">Main</string>
    <string name="topBarLabel">Interesting Places</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_places">PlacesActivity</string>


    <!-- NAVIGATION -->
    <string name="navigation_profile">Profil użytkownika</string>
    <string name="navigation_map">Mapa</string>
    <string name="navigation_places">Lista miejsc</string>

    <!-- ADD PLACE-->
    <string name="add_place_label">Dodaj miejsce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeName">Nazwa miejsca</string>
    <string name="placeLocalization">Lokalizacja</string>
    <string name="placeDescription">Opis miejsca</string>
    <string name="placeImages">Dodaj zdjęcia</string>
    <string name="selectPlace">Wybierz miejsce</string>
    <string name="Add">Dodaj</string>

</resources>
